--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>iWatch宣传页</title>
+	<title>Apple Watch宣传页</title>
 	<link rel="stylesheet" href="css/index.css">
 	<link href="https://cdn.bootcss.com/fullPage.js/2.8.9/jquery.fullPage.css" rel="stylesheet">
 
@@ -115,7 +115,6 @@
 		   				default:
 		   					break;
 		   			}
-
 		   		}
 		   	});		
 		});
