--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 		   					break;
 		   			};
 		   		},
-		   		onLeave:function(link,index){
+		   		onLeave:function(index,ndex){
 		   			switch(index){
 		   				case 1:
 		   					move('.section1 h2').scale(1).end();
